# petite_DB

./: .gitmodules  CMakeLists.txt  Dialect_gen.h  README.md
data/d1/: t0.csv
data/t1/: t1.csv
doc/: PetiteDialect 
include/Database/: Database.h
include/PetiteMlir/: Dialect.h  MLIRGen.h  Ops.td  TableTypes.td
include/SqlToAst/: SqlToAst.h
script/: gen.sh  gitGo.sh  makeGo.sh  mlir_original.sh  test.sh
script/src/: Ops_gen.cpp
src/: CMakeLists.txt  petite.cpp
src/Database/: CMakeLists.txt  Database.cpp
src/PetiteMlir/: Dialect.cpp  MLIRGen.cpp  PetiteDialect.td
src/SqlToAst/: CMakeLists.txt  SqlToAst.cpp
test/: Readme.md  ast1  ast2  ast3  ast4  ast5  q1.sql  q2.sql  q4.sql  q5.sql
test/mlir/: llvm_original.mlir  m1.mlir  original.ll  original.mlir  readfile.mlir
tmp/: CMakeLists.txt  example.cpp  toyc.cpp
tmp/v1/: Makefile  demo.cpp  example
tmp/v2/: gen.sh
tools/: CMakeLists.txt  ast_to_mlir.cpp  sql_to_ast.cpp
